# constexpr-everything

./: CMakeLists.txt  main.cpp
